fixs bugs